force-app/main/default/objects/Lead_Scored__e/Lead_Scored__e.object-meta.xml
<CustomObject>
    <description>Publicado quando um Lead recebe pontuação de qualificação. Dispara follow-up automático para leads com score alto.</description>
    <label>Lead Scored</label>
    <pluralLabel>Lead Scored Events</pluralLabel>
</CustomObject>