force-app/main/default/objects/Lead_Scored__e/fields/Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id__c</fullName>
    <label>Lead Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>