force-app/main/default/objects/Lead_Scored__e/fields/Previous_Score__c.field-meta.xml
<CustomField>
    <fullName>Previous_Score__c</fullName>
    <label>Previous Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>