force-app/main/default/objects/Lead_Scored__e/fields/Score_Reason__c.field-meta.xml
<CustomField>
    <fullName>Score_Reason__c</fullName>
    <label>Score Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>